SERVER-99349 Allow duplicated sort values across different partitions in $fill (#32217)

GitOrigin-RevId: 290f9302e89f2c3e52691e129a789ff50d799948